--- a/pogoda/pogoda.csproj
+++ b/pogoda/pogoda.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Model\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+  </ItemGroup>
+
 </Project>
